# artificially-intelligent

./: .gitignore  Accessing_GPT_4_1_nano_Like_a_Developer.ipynb  FAQandCommonIssues.md  README.md  pyproject.toml  requirements.txt  vercel.json
.cursor/rules/: frontend-rule.mdc  (+2 more)
aap-ragas/: lotr_testset.csv  ragas.ipynb
afib-predict/: 1_eda.ipynb  1a_eda_2017.ipynb  1b_eda_mit_bih.ipynb  1b_pan_tompkins.ipynb  1c_explore_biospy.ipynb  1c_mit_bih.ipynb  2_arima.ipynb  2a_explore_arima_2017.ipynb  2a_explore_rr_mit_bih.ipynb  2b_biospy.ipynb  2b_pan_tompkins_2017.ipynb  2c_pan_tompkins_mitbih.ipynb  3_advanced_features.ipynb  3a_explore_resampling.ipynb  3b_pca_visualization.ipynb  3b_pca_visualization_2017.ipynb  3b_pca_visualization_mit_bih.ipynb  4_find_best_model.ipynb  4b_find_best_model.ipynb  4c_find_best_model_mit_bih.ipynb  README.md
ai-engineering/day_1/: Accessing_GPT_4_1_nano_Like_a_Developer.ipynb  Hello_LLM.ipynb  pyproject.toml
ai-engineering/day_5/: Introduction_to_LangGraph_for_Agents_Assignment_Version.ipynb  README.md  pyproject.toml
ai-testplanner/: .gitignore  Dockerfile  README.md  chainlit.md  mltp.py  requirements.txt  tax_calculator_screen_test_cases.xlsx  tax_support_center_screen_test_cases.xlsx  test.ipynb
api/: README.md  app.py  requirements.txt  vercel.json
docs/: GIT_SETUP.md
dr-mike/: .gitignore  README.md  next.config.js  package-lock.json  package.json
frontend/: README.md
kevin/: README.md  config.json  config.py  env.example  kevin.py  kevin_tutorial.ipynb  requirements.txt
knn-price-prediction/: knn-cardekho.ipynb
(+8566 files in other folders)
